Fixed info alignment on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -125,8 +125,8 @@ body{
     margin-top: 10px;
     width: 80vw;
 
-    top: 45%;
-    transform: translate(-50%, -45%);
+    top: 40%;
+    transform: translate(-50%, -40%);
   }
   .info-content{
     margin-top: 5px;
